kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /user-manager(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-manager
                port:
                  number: 5000
          - path: /data-collector(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: data-collector
                port:
                  number: 5000
